--- a/css/styles.css
+++ b/css/styles.css
@@ -83,7 +83,7 @@
 	font-family: Lato-Regular, sans-serif;
 	text-align: justify;
 	margin: 20px 0;
-	padding: 0 20px;
+	/* padding: 0 20px; */
 }
 
 .temp-para {
@@ -207,9 +207,13 @@
 	margin-top: 0;
 }
 
+.remove-padding {
+	padding-left: 0;
+}
+
 /* media query */
 
-@media (max-width: 767px) {
+@media (max-width: 991px) {
 	.form-container {
 		/* transform: translateY(0); */
 		margin-top: 0;
